--- a/FlightDocsSystem/FlightDocsSystem.csproj
+++ b/FlightDocsSystem/FlightDocsSystem.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
